[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
tokio = { version = "1.32.0", features = ["full"] }
utoipa = { version = "3.5.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }

